--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
     "async": "^1.0.0",
     "debug": "^2.1.1",
     "loopback-connector": "^2.2.0",
-    "mongodb": "^2.2.20",
-    "strong-globalize": "^2.6.0"
+    "mongodb": "^2.2.36",
+    "strong-globalize": "^2.6.0",
+    "tunnel-ssh": "^4.1.6"
   },
   "devDependencies": {
+    "@airbnb/node-memwatch": "^2.0.0",
     "benchmark": "^1.0.0",
     "bluebird": "^2.9.12",
     "eslint": "^2.7.0",
     "eslint-config-loopback": "^1.0.0",
     "loopback-datasource-juggler": "^2.53.0",
-    "memwatch-next": "^0.2.6",
     "mocha": "^2.1.0",
     "rc": "^1.0.0",
     "semver": "^4.2.0",
